--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                             target="_blank" rel="noopener noreferrer">michellebelgrod.com</a></div>
                 </div>
                 <div id="designer-block">
-                    <div><span id="num-list" class="hover-target" data-img="photos/Rebecca.png">[02]</span> <span
+                    <div><span id="num-list" class="hover-target" data-img="photos/rebecca.png">[02]</span> <span
                             id="designers-name">Rebecca
                             Wilkinson</span> </div>
                     <div>
