--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
     <div id="main-container">
         <div id="menu-bar">
             <div id="home-about">
-                <div id="home-button">RISD GD MFA 2024</div>
-                <div> <a href="about">+ About the Show</a></div>
+                <div id="home-button"><a href="index.html">RISD GD MFA 2024</a></div>
+                <div> <a href="about.html">+ About the Show</a></div>
             </div>
         </div>
         <div id="about-wrapper">
