--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/favicon.png">
+
     <title>SUPER SATURATED</title>
 </head>
 
@@ -91,7 +93,7 @@
                 <div id="designer-block">
                     <div><span id="num-list" class="hover-target" data-img="photos/shiyue.png">[06]</span> <span
                             id="designers-name">Shiyue Wang</span> </div>
-                    <div>Chasing traces, mapping routines, observing the overlooked — I seek  the mundane poetic
+                    <div>Chasing traces, mapping routines, observing the overlooked — I seek the mundane poetic
                         instants that celebrate our world. </div>
 
                     <div><span id="italic-text">Life of Things, Things of Life</span><br><a
