--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div id="menu-bar">
         <div id="home-about">
         <div id="home-button">RISD GD MFA 2024</div>
-        <div> <a href="about.html">+ About the Show</a></div>
+        <div> <a href="about.html">About the Show</a></div>
       </div>
         <div id="clear-button">[Clear]</div>
       </div>
