--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/favicon.png">
-
+<style>
+   @media only screen and (max-width: 600px) {
+  #main-container{
+    height: 100dvh;
+  }
+  .letter{
+    transition: font-variation-settings 1s ease;
+    font-size: 100px;
+    transform-origin: 85%;
+   
+  }
+}
+</style>
     <title>SUPER SATURATED</title>
   </head>
   <body>
