--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <div id="menu-bar">
         <div id="home-about">
         <div id="home-button">RISD GD MFA 2024</div>
-        <div> <a href="about.html">About the Show</a></div>
-      </div>
+        <div> <a id="about-link" href="about.html">About the Show</a></div>
+            </div>
         <div id="clear-button">[Clear]</div>
       </div>
       <div id="display">
