--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
             <div id="about-text">
                 <div class="mobile-top-space"></div>
                 <div>
-                    <span class="quote">“In the age of information overload, the ultimate luxury is meaning and
-                        context.”</span>
+                    “In the age of information overload, the ultimate luxury is meaning and
+                        context.”
                     <br>
-                    <span class="author">— Louis Rossetto</span>
+                  — Louis Rossetto
                 </div>
                 <div>Graphic designers today operate in a supersaturated visual landscape. We produce image, text, and
                     form; we create and circulate content; we are asked to do so in excess. Design recirculates beyond
