--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="container">
 		<nav class="nav">
 			<div class="nav-links">
-				<a href="/" class="nav-link">RISD GD MFA 2024</a>
+				<a href="/" class="nav-link" style="margin-bottom: 10px;">RISD GD MFA 2024</a>
 				<a href="/about/" class="nav-link">About the Show</a>
 			</div>
 			<button class="nav-link" onclick="clearScreen();" id="clear" style="display: none;">[Clear]</button>
