--- a/about/index.html
+++ b/about/index.html
@@ -180,7 +180,7 @@
 					</p>
 					<p>
 						<em>Here—there</em><br>
-						<a href="https://glikerii.com/" target="_blank">glikerii.com</a>
+						<a href="https://glikeriya.com/" target="_blank">glikeriya.com</a>
 					</p>
 				</div>
 
